# nanoadsorption

./: .gitignore  CLAUDE.md  README.md  README_multi.md  adsorption.py  ci-script.sh  gui.py  main.py  ode_adsorption.py  pyproject.toml  scan_KD.py  scan_Nligands.py  scan_Npdosing.py  scan_Npdosing_langmuir.py  scan_multi_Npdosing.py  system_variables.py  system_variables_L2.py  system_variables_L3.py  system_variables_dosing.py  system_variables_invitro.py  system_variables_invivo.py  system_variables_invivo_multi.py  system_variables_old.py  system_variables_original.py  system_variables_test.py  test.py  test_multi.py  test_multi_single_receptor.py  test_self_cons.py  units.py
.github/workflows/: ci.yaml
Summary_for_AZ/: adsorption.py  main.py  w_vs_h.py
Windows/MulriValLep_invivo/: MultiValL1.csv  MultiValLep.txt
Windows/MulriValRep_invivo/: MultiValR1.csv  MultiValRe.txt  adsorption.txt
Windows/MultiValCep_invitro/: MultiValC1.csv  MultiValCep_invitro.txt  adsorption_invitro.txt
Windows/MultiValRep_invitro/: MultiValR1.csv  MultiValRep_invitro.txt
rust/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/scripts/: perf.sh
rust/src/: main.rs  multivalent_binding.rs  params.rs
